# ipm-challenge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
core/: settings.py  urls.py
core/account/: entities.py  exceptions.py  factory.py  mapper.py  models.py  repository.py  serializers.py  urls.py
core/account/migrations/: 0001_initial.py
core/account/tests/: factory.py
core/account/tests/models/: test_account_model.py
core/account/tests/use_cases/: test_creat_account.py  test_db_get_account.py  test_delete_account.py  test_update_account.py
core/account/tests/views/: test_create_account.py  test_delete_account.py  test_get_account.py  test_update_account.py
core/account/use_cases/: create_account.py  db_get_account.py  delete_account.py  update_account.py
core/account/views/: account_detail.py  account_register.py  create_account.py  create_list_account.py
core/authentication/: urls.py  views.py
core/middlewares/: auto_append_slash.py  block_post_redirect.py
core/prediction/: apps.py  factory.py  serializers.py  urls.py
core/prediction/prediction_models/: balance_predictor.py
core/prediction/tests/use_cases/: test_load_balance_predictior.py
core/prediction/tests/views/: test_balance_prediction.py
core/prediction/use_cases/: load_balance_predictor.py
core/prediction/views/: balance_predictor.py
core/shared/: exception_handler.py  exceptions.py  schema_exceptions.py  validators.py
ipm_challenge/: asgi.py  settings.py  urls.py  wsgi.py
